# frontendTester

./: .editorconfig  .env.example  .gitignore  Automated_Regression_Testing_Research.md  CLAUDE.md  DOCKER_SETUP.md  DONE.md  Dockerfile  PHASE3_COMPLETE.md  PHASE3_REPORT_STATUS.md  PHASE3_SUMMARY.md  PHASE3_USAGE.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
src/frontend_tester/: __init__.py
src/frontend_tester/ai/: __init__.py  analyzer.py  client.py  generator.py
src/frontend_tester/ai/prompts/: __init__.py  test_generation.py  ui_analysis.py
src/frontend_tester/bdd/: __init__.py  common_steps.py  generator.py  step_generator.py
src/frontend_tester/bdd/templates/: browser.jinja2  conftest.jinja2  feature.jinja2  steps.jinja2
src/frontend_tester/cli/: __init__.py  main.py  utils.py
src/frontend_tester/cli/commands/: analyze.py  config.py  generate.py  init.py  run.py
src/frontend_tester/core/: __init__.py  config.py  project.py
src/frontend_tester/playwright_runner/: __init__.py  browser_manager.py
src/frontend_tester/visual/: __init__.py
tests/: __init__.py  test_app_connectivity.py  test_browser_manager.py  test_cli.py  test_config.py  test_llm_client.py  test_project.py
